--- a/mails/activation-mail.ejs
+++ b/mails/activation-mail.ejs
@@ -82,8 +82,8 @@
       <div class="email-body">
         <p>Hello <%= user.name %>,</p>
         <p>
-          Thank you for registrering with E-Learning. To active your account ,
-          please use the following activation code;
+          Thank you for registrering with <b>E-Learning</b>. To active your
+          account , please use the following activation code;
         </p>
         <h2><%= activationCode %></h2>
         <p>
@@ -91,14 +91,16 @@
           minutes.
         </p>
         <p>
-          If you did not register for a E-Learning account, plese ignore this
-          email.
+          If you did not register for a <b>E-Learning</b> account, plese ignore
+          this email.
         </p>
       </div>
       <div class="email-footer">
         <p>
           If you have any questions, please don't hasitate to contact us at
-          <a href="mailto:ashikrahman9194@gmail.com">ashikrahman@gmail.com</a>
+          <a href="mailto:ashikrahman9194@gmail.com"
+            >ashikrahman9194@gmail.com</a
+          >
         </p>
       </div>
     </div>
